--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,22 +27,35 @@
           </ul>
         </li> -->
       </ul>
+
+
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+
+        <% if !user_signed_in? %>
+
+          <li> <%= link_to 'Sign In', user_session_path %> </li>
+          <li> <%= link_to 'Sign Up', new_user_registration_path %> </li>
+
+        <% else %>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %>  <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
+                <li><%= link_to 'Edit Profile',  edit_user_registration_path %></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+
+            <% end %>
+
           </ul>
         </li>
       </ul>
