--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -17,7 +17,8 @@
         <td><%= image_tag listing.image.url(:medium) %></td>
         <td><%= listing.name %></td>
         <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
+        <td><%= number_to_currency(listing.price) %></td>
+        <td><%= listing.user.name.to_json %></td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
         <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
