--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,13 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">EtsyDemo</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active font-me"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#" class="font-me">Link</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -40,19 +40,19 @@
 
         <% if !user_signed_in? %>
 
-          <li> <%= link_to 'Sign In', user_session_path %> </li>
-          <li> <%= link_to 'Sign Up', new_user_registration_path %> </li>
+          <li> <%= link_to 'Sign In', user_session_path, class: 'font-me' %> </li>
+          <li> <%= link_to 'Sign Up', new_user_registration_path, class: 'font-me' %> </li>
 
         <% else %>
 
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %>  <span class="caret"></span></a>
+            <li class="dropdown font-me">
+              <a href="#" class="dropdown-toggle font-me" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.name %>  <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
-                <li><%= link_to 'Edit Profile',  edit_user_registration_path %></li>
-                <li><a href="#">Something else here</a></li>
+                <li><%= link_to('Sign out', destroy_user_session_path, class: 'font-me', :method => :delete) %></li>
+                <li><%= link_to 'Edit Profile',  edit_user_registration_path, class: 'font-me' %></li>
+                <li><a href="#" class="font-me">Something else here</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="#" class="font-me">Separated link</a></li>
 
             <% end %>
 
