--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,32 +1,27 @@
-<h1>Listing Listings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= image_tag listing.image.url(:medium) %></td>
-        <td><%= listing.name %></td>
-        <td><%= listing.description %></td>
-        <td><%= number_to_currency(listing.price) %></td>
-        <td><%= listing.user.name.to_json %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="container">
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+  <div class="row">
+   <% @listings.each do |listing| %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(listing.image.url(:medium)), listing %>
+        <div class="caption text-center">
+        <%= listing.description %><br>
+          <%= "Sold By: #{ listing.user.name }" %><br>
+          <%= number_to_currency(listing.price) %><br>
+           <% if (user_signed_in?) && (current_user == listing.user) %>
+              <%= link_to 'Edit', edit_listing_path(listing), class: 'btn btn-link' %>
+              <%= link_to 'Destroy', listing, class: 'btn btn-link', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+          </div>
+      </div>
+    </div>
+    <% end %> <br>
+  </div>
+
+  <% if user_signed_in? %>
+  <%= link_to 'New Listing', new_listing_path, class: 'btn btn-link' %>
+  <% end %>
+</div>
+<br>
