--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,20 +1,18 @@
 
+  <div class="row">
+    <div class="col-xs-6">
+      <%= image_tag @listing.image.url, class: 'img' %>
+    </div>
+    <div class="col-xs-6 col-md-4 ">
+        <legend><%= @listing.name %> <p class="pull-right text-danger"><%= number_to_currency @listing.price %></p></legend><br>
 
-<%= image_tag @listing.image.url(:thumb) %>
-<p>
-  <strong>Name:</strong>
-  <%= @listing.name %>
-</p>
+        <%= @listing.description %> <br>
 
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
+      <% if (user_signed_in?) && ( current_user == @listing.user ) %>
+        <%= link_to 'Edit', edit_listing_path(@listing), class: 'btn btn-link' %> |
+        <%= link_to 'Back', listings_path, class: 'btn btn-link' %>
+      <% end %>
 
-<p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
-</p>
+    </div>
+  </div>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
